Fix zoom on text inputs on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 body {
-  background-color:  red;
+  font-size: 16px;
+}
+
+input,
+button {
+  font-size: inherit;
 }
